--- a/app/views/campaigns/shared/_showinvestor.html.erb
+++ b/app/views/campaigns/shared/_showinvestor.html.erb
@@ -31,7 +31,7 @@
   </div>
 </div>
 
-<div class="container" style="margin-top: -50px;">
+<div class="container" style="margin-top: -120px;">
   <div class="row">
     <div class="col-md-8">
       <!-- COMPANY LOGO -->
@@ -39,7 +39,7 @@
         <img class="" style="border-radius: 20px; border-color: 1px solid white; height: 144px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);" src="https://www.pinclipart.com/picdir/middle/78-785464_clipart-restaurant-lunch-restaurant-cubiertos-para-colorear-png.png" alt="avatar">
       </div>
 
-      <h2 class="mt-3" style="font-weight: bold;">Tipo Siete</h2>
+      <h2 class="mt-3" style="font-weight: bold;"><%= @campaign.company.name %></h2>
       <!-- CAMPAIGN PROGRESS STATUS -->
       <div class="justify-content-center">
         <div class="">
@@ -69,14 +69,14 @@
           </div>
         </div>
 
-        <h4>Campaign Descriptipn</h4>
-        <p>A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months. A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months.</p>
+        <h4><%= @campaign.title %></h4>
+        <p><%= @campaign.description %></p>
 
         <div class="card-risk-level p-3 my-5" style="width: 500px; background-color: #f4f4f4; border-radius: 20px; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);">
           <div class="p-2 d-flex justify-content-around align-items-center" style="background-color: white; border-radius: 16px;">
             <div class="text-center">
               <p class="m-0">Risk Level</p>
-              <span style="font-size: 48px; font-weight: bold; margin: 0;"><p class="m-0">#</p></span>
+              <span style="font-size: 48px; font-weight: bold; margin: 0;"><p class="m-0"><%= @campaign.risk_level %></p></span>
             </div>
             <div style="border: 1px solid lightgrey; height: 80px"></div>
             <div>
@@ -89,8 +89,8 @@
           </div>
         </div>
 
-        <h4>Campaign Descriptipn</h4>
-        <p>A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months. A quality and relaxing rural country pub, run by award winning owners. The building and decor are charming and rustic, with elegant modern touches overlooking open country fields or in a pretty courtyard filled with flowers in the summer months.</p>
+        <h4>Company Description</h4>
+        <p><%= @campaign.company.description %></p>
 
       </div>
     </div>
@@ -108,7 +108,7 @@
             <!-- invest field and button -->
             <%= simple_form_for [@campaign, @investment], url: new_campaign_investment_path(@campaign), method: :get do |f| %>
             <div class="d-flex justify-content-between align-items-center">
-              <%= f.input :amount, class: "input-field", placeholder: "$250", label: false, :required => true %>
+              <%= f.input :amount, class: "input-field", placeholder: "$ 250", label: false, :required => true %>
               <%= f.submit "Invest", class: "btn btn-success" %>
               <% end %>
             </div>
@@ -123,19 +123,19 @@
             <!-- campaign stats -->
             <div class="my-2 d-flex justify-content-between">
               <div class="text-center">
-                <h5 class="m-0">5%</h5>
+                <h5 class="m-0"><%= @campaign.return_rate %></h5>
                 <p class="text-secondary m-0" style="font-size: 12px;">return</p>
               </div>
               <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
               </div>
               <div class="text-center">
-                <h5 class="m-0">48</h5>
+                <h5 class="m-0"><%= @campaign.loan_duration %></h5>
                 <p class="text-secondary m-0" style="font-size: 12px;">months</p>
               </div>
               <div class="align-self-center" style="border: 1px solid lightgrey; height: 50px">
               </div>
               <div class="text-center">
-                <h5 class="m-0">$100,000</h5>
+                <h5 class="m-0"><%= @campaign.min_target %></h5>
                 <p class="text-secondary m-0" style="font-size: 12px;">target</p>
               </div>
             </div>
@@ -145,7 +145,6 @@
               <form>
                 <div class="investment-slider my-3">
                   <label for="investmentRange" style="font-size: 12px;">Investment</label>
-                  <br>
                   <input type="range" class="investment-range w-100" min="100" max="1000" step="10" id="investmentRange">
                 </div>
               </form>
