--- a/app/views/campaigns/_form.html.erb
+++ b/app/views/campaigns/_form.html.erb
@@ -1,20 +1,112 @@
- <div class="container">
-  <div class="row justify-content-center text-center">
+ <div class="container w-50">
+  <div class="justify-content-center text-center">
 
-    <%= simple_form_for(@campaign) do |f| %>
-    <%= f.error_notification %>
-    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <h3>Your Company</h3>
+    <%= simple_form_for(@campaign) do |c| %>
+    <%= c.error_notification %>
+    <%= c.error_notification message: c.object.errors[:base].to_sentence if c.object.errors[:base].present? %>
 
-    <div class="form-inputs">
-      <%= f.input :title %>
-      <%= f.input :description, hint: "What\'s your idea? Why are you launching a campaign? Enroll investors into your story"  %>
-      <%= f.input :min_target, label: 'Minimum amount for succesful campaign'  %>
-      <%= f.input :max_target, label: 'Maximum amount'  %>
-      <%= f.input :loan_duration, as: :radio_buttons, collection: %w(12 24 36 48 60), label: 'Payback period in months' %>
+    <%= simple_fields_for(@company) do |f| %>
+    <div class="form-group row">
+      <label for="company_name" class="col-sm-2 col-form-label">Name</label>
+      <div class="col-sm-10 w-50">
+        <input type="text" class="form-control" id="company_name">
+      </div>
     </div>
 
+    <!-- address search field -->
+    <label class="string optional" for="company_address">Address</label>
+    <input id="searchbox" class="form-control mr-sm-2 text-left" type="search" aria-label="Search" name="company[address]">
+
+    <%= f.input :num_employees, collection: 1..50 %>
+
+    <!-- category choice -->
+    <label class="string optional w-25" for="company_type_store">Type Store</label>
+    <div class="custom-control custom-radio custom-control-inline">
+      <input type="radio" value="company_type_store_restaurant" id="company_type_store_restaurant" name="campaign[loan_duration]" class="custom-control-input">
+      <label class="custom-control-label" for="customRadioInline1">Restaurant</label>
+    </div>
+    <div class="custom-control custom-radio custom-control-inline">
+      <input type="radio" value="company_type_store_coffee"  id="company_type_store_coffee" name="customRadioInline1" class="custom-control-input">
+      <label class="custom-control-label" for="customRadioInline2">Coffee</label>
+    </div>
+    <div class="custom-control custom-radio custom-control-inline">
+      <input type="radio" value="company_type_store_bar"  id="company_type_store_bar" name="customRadioInline1" class="custom-control-input">
+      <label class="custom-control-label" for="customRadioInline2">Bar</label>
+    </div>
+
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text">Company description</span>
+      </div>
+      <textarea class="form-control" id="company_description" aria-label="With textarea"></textarea>
+    </div>
+
+    b
+
+    <% end %>
+
+    <br>
+    <br>
+
+    <h3>Your campagin</h3>
+
+    <div class="form-inputs">
+      <%= c.input :title %>
+      <%= c.input :description, hint: "What\'s your idea? Why are you launching a campaign? Enroll investors into your story"  %>
+
+      <div class="input-group mb-3">
+        <label class="string optional w-25" for="min_target">Minimum Amount</label>
+        <div class="input-group-prepend">
+          <span class="input-group-text">$</span>
+        </div>
+        <input type="text" class="integer form-control" aria-label="Amount (to the nearest dollar)" name="campaign[min_target]" id="campaign_min_target">
+        <div class="input-group-append">
+          <span class="input-group-text">.00</span>
+        </div>
+      </div>
+
+      <div class="input-group mb-3">
+        <label class="string optional w-25" for="min_target">Maximum Target</label>
+
+        <div class="input-group-prepend">
+          <span class="input-group-text">$</span>
+        </div>
+        <input type="text" class="integer form-control" aria-label="Amount (to the nearest dollar)" name="campaign[max_target]" id="campaign_max_target">
+        <div class="input-group-append">
+          <span class="input-group-text">.00</span>
+        </div>
+      </div>
+
+
+      <!-- Radio button inline loan duration -->
+      <label class="string optional w-25" for="campaign_loan_duration">Loan duration</label>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" value="12" id="campaign_loan_duration_12" name="campaign[loan_duration]" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline1">12</label>
+      </div>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" value="24"  id="campaign_loan_duration_24" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline2">24</label>
+      </div>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" value="36"  id="campaign_loan_duration_36" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline2">36</label>
+      </div>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" value="48"  id="campaign_loan_duration_48" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline2">48</label>
+      </div>
+      <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" value="60"  id="campaign_loan_duration_60" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline2">60</label>
+      </div>
+
+    </div>
+
+
     <div class="form-actions">
-      <%= f.button :submit, class:"btn btn-secondary" %>
+      <%= c.button :submit, class:"btn btn-secondary" %>
     </div>
     <% end %>
 
