--- a/app/views/campaigns/support.html.erb
+++ b/app/views/campaigns/support.html.erb
@@ -7,16 +7,44 @@
 
   <div class="col-md-10 col-lg-10 p-0">
     <div class="container">
-      <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
+      <div class="form-wrapper">
         <div style="margin-bottom: 50px;">
           <h1>Support</h1>
         </div>
-        <%= simple_form_for :search, method: "get" do |f| %>
-        <%= f.input :Available_dates, as: :string, required: false, input_html: {class: "datepicker"} %>
-        <%#= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
-        <%= f.button :submit, "Schedule an appointment now", class: "btn btn-primary" %>
+        <%= simple_form_for :support do |f| %>
+        <div class="row">
+
+          <div class="col-12 col-md-6">
+            <%= f.input :date, as: :string, required: false, input_html: {class: "datepicker"} %>
+          </div>
+          <%#= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
+          <div class="col-12 col-md-6">
+
+            <div class="form-group pb-2">
+              <label for="InputName">Name</label>
+              <input type="text" class="form-control" id="InputName" aria-describedby="emailHelp" placeholder="Name" name="support[name]">
+              <small id="emailHelp" class="form-text text-muted"></small>
+            </div>
+
+            <div class="form-group pb-2">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="support[email]">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Your Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="support[message]"></textarea>
+            </div>
+
+            <%= f.button :submit, "Schedule an appointment now", class: "btn btn-primary" %>
+          </div>
+        </div>
         <% end %>
       </div>
     </div>
   </div>
+
+
+
 </div>
