--- a/app/views/campaigns/support.html.erb
+++ b/app/views/campaigns/support.html.erb
@@ -38,7 +38,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="support[message]"></textarea>
               </div>
 
-              <%= f.button :submit, "Schedule a call now", class: "btn btn-success" %>
+              <%= f.button :submit, "Schedule a call", class: "btn btn-success" %>
             </div>
 
           </div>
