--- a/app/views/campaigns/support.html.erb
+++ b/app/views/campaigns/support.html.erb
@@ -7,7 +7,7 @@
 
   <div class="col-md-10 col-lg-10 p-0">
     <div class="container">
-      <div class="form-wrapper">
+      <div class="form-wrapper mx-5">
 
         <div class="mx-auto my-5 w-50 text-center" style="font-size: 20px;">Our team of experts stands at your serivce to help you launch your campaign. Schedule a call to get started.</div>
 
@@ -15,7 +15,7 @@
           <%= simple_form_for :support do |f| %>
           <div class="row">
             <div class="col-12 col-md-6">
-              <%= f.input :date, as: :string, required: false, input_html: {class: "datepicker"} %>
+              <%= f.input :date, as: :string, required: false, input_html: {class: "datepicker", style:"width: 310px;"} %>
             </div>
             <%#= f.input :ends_at, as: :string, required: false, input_html: {class: "datepicker"} %>
             <div class="col-12 col-md-6">
